fix: fixed stickers not visible beyond template

--- a/static/css/review_screen.css
+++ b/static/css/review_screen.css
@@ -142,7 +142,7 @@
     margin: auto;
     /* Centers the content when smaller, allows safe overflow when larger */
     transform-origin: center center;
-    overflow: hidden;
+    overflow: visible;
 }
 
 #zoom-controls {
